src/test/ui/single-use-lifetime/one-use-in-inherent-method-return.stderr
error: lifetime parameter `'f` only used once
  --> $DIR/one-use-in-inherent-method-return.rs:12:6
   |
LL | impl<'f> Foo<'f> {
   |      ^^      -- ...is used only here
   |      |
   |      this lifetime...
   |
note: lint level defined here
  --> $DIR/one-use-in-inherent-method-return.rs:1:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

